--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -42,7 +42,7 @@ under the License.
 $nav-bg: var(--background-grey);
 $examples-bg: var(--app-background);
 $code-bg: #404040;
-$code-annotation-bg: #949CAA;
+$code-annotation-bg: var(--dark-blue);
 $nav-subitem-bg: var(--app-background);
 $nav-active-bg: #347BC5;
 $nav-active-parent-bg: var(--dark-blue); // parent links of the current section
@@ -51,7 +51,7 @@ $lang-select-bg: #1E2224 !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
 $main-bg: #FBFDFC;
-$aside-notice-bg: #8fbcd4 !default;
+$aside-notice-bg: var(--blue);
 $aside-warning-bg: #c97a7e !default;
 $aside-success-bg: #6ac174 !default;
 $search-notice-bg: #c97a7e !default;
